# newsly_ai_reporter

./: .gitignore  main.py  pyproject.toml
app/: config.py  db.py  gradio_ui.py  main.py  models.py  storage.py
app/services/: reporter.py  saver.py  transcription.py  vision.py
